@@ -74,6 +74,8 @@ FIXES
 
  * Default group not correctly selected in administration interface combobox field
 
+ * Widget calendar widget style problems
+
 
 
 
